--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-twitter-scraper",
   "version": "0.1.0",
-  "description": "",
+  "description": "Use Twitter without an APIs hassle",
   "keywords": [
     "n8n-community-node-package"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/AlejandroAkbal/n8n-nodes-twitter-scraper",
   "author": {
-    "name": "",
+    "name": "Alejandro Akbal",
     "email": ""
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/AlejandroAkbal/n8n-nodes-twitter-scraper.git"
   },
   "main": "index.js",
   "scripts": {
@@ -39,14 +39,17 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/request-promise-native": "~1.0.15",
-    "@typescript-eslint/parser": "~5.45",
-    "eslint-plugin-n8n-nodes-base": "^1.11.0",
+    "@types/express": "^4.17.21",
+    "@types/request-promise-native": "~1.0.21",
+    "@typescript-eslint/parser": "~7.1",
+    "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^4.0.2",
     "n8n-core": "*",
     "n8n-workflow": "*",
-    "prettier": "^2.7.1",
-    "typescript": "~4.8.4"
+    "prettier": "^3.2.5",
+    "typescript": "~5.3.3"
+  },
+  "dependencies": {
+    "rettiwt-api": "^2.6.2"
   }
 }
