feat: misc changes, and add icon

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ dist
 npm-debug.log*
 yarn.lock
 .vscode/launch.json
+.idea
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
